--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@ Home
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="/features">Features</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/pricing">Pricing</a>
