fix okta version

--- a/src/app/books/book.component.html
+++ b/src/app/books/book.component.html
@@ -22,7 +22,7 @@
             <div class="box bg-light ">
               <a href="" routerLink="/books/{{item.id}}" >
                 <div class="slide-img">
-                  <i> <img class="image"  src="../assets/images/sample.jpeg" alt=""></i>
+                  <i> <img class="image"  src="../assets/images/Webp.net-resizeimage-05d69d62624843d4afc367ab3a4a3d3a.webp" alt=""></i>
                   // TODO when clicked should direct me to checkout
                   <div class="overlay"><a routerLink="/books/{{item.id}}" class="buy-btn">Buy now</a></div>
                 </div>
