--- a/src/app/components/book-detail/book-detail.component.css
+++ b/src/app/components/book-detail/book-detail.component.css
@@ -90,3 +90,94 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,81,121,1) 35%, rgba
       top: 110%;
     }
   }
+
+  .btn {
+    font-weight: 600;
+    position: relative;
+    padding: 14px 40px;
+    border-radius: 5px;
+    font-size: 16px;
+    font-family: "DM Sans", sans-serif;
+    border: 1px solid transparent;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    transition: all 0.3s ease-in-out;
+}.btn-main {
+  background: #FF4343;
+  color: #fff;
+  border-color: #FF4343;
+}
+.center-heading h3 {
+  position: relative;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+.heading-title {
+  font-size: 46px;
+}
+
+
+p{
+  display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;}
+    .center-heading h3:before {
+      position: absolute;
+      content: "";
+      left: 0px;
+      right: 0px;
+      width: 40px;
+      height: 2px;
+      bottom: 0px;
+      margin: 0px  auto;
+      background: #FF4343;
+  }
+
+/* 3rows */
+.feature-style-2 {
+  text-align: center;
+  transition: .4s;
+  background: #fff;
+  padding: 40px 50px;
+  border-radius: 8px;
+  box-shadow: 0 5px 30px 0 rgba(214, 215, 216, 0.57);
+}
+.feature-style-2 i {
+  font-size: 40px;
+  color: #FF4343;
+  transition: .4s ease;
+}.bi-badge2::before {
+  content: "";
+
+}.feature-style-2 i {
+  font-size: 40px;
+  color: #FF4343;
+  transition: .4s ease;
+}
+.bi {
+  font-family: 'bicon'!important;
+  font-weight: 400;
+  font-style: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-transform: none;
+  speak: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.bi:first:after .bi:last-child::after {
+    content: "";
+}
+
+
+.center-heading h3 {
+  position: relative;
+  margin-top: 5%;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}.banner {
+  padding: 60px 0px;
+  background: #F8F8F8;
+}
