--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <body>
   
   <app-header
-  [categories]="categories"
+  [categoriesToHeader]="categories"
   >
 
   </app-header>
@@ -36,8 +36,7 @@
 
 
 <!---->
-    <router-outlet></router-outlet>
-
+<router-outlet></router-outlet>
 
   <lord-icon
       src="https://cdn.lordicon.com/wxnxiano.json"
@@ -47,7 +46,7 @@
   </lord-icon>
 
 
-  <footer class="footer-section">
+  <footer class="footer-section ">
     <div class="container">
         <div class="footer-cta pt-5 pb-5">
             <div class="row">
