--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -56,6 +56,7 @@ ul {
   padding: 0px;
 }
 .footer-section {
+margin-top: 200px;
 background: #151414;
 position: relative;
 }
@@ -210,4 +211,9 @@ color: #ff5e14;
 .footer-menu li a {
 font-size: 14px;
 color: #878787;
+}
+
+.footer-section{
+    margin-top: 500px;
+    margin-bottom: 0px;
 }
