--- a/src/app/components/book-detail/book-detail.component.css
+++ b/src/app/components/book-detail/book-detail.component.css
@@ -1,183 +1,43 @@
-.book-detail{
-    background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,81,121,1) 35%, rgba(0,212,255,1) 100%);
+body {
+  font-family: "Nunito", sans-serif;
+  background-color: #eeeeee;
 }
-
-/* //ani back */
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box !important;
-  }
-  
-  html, body {
-    height: 100%;
-  }
-  
-  body {
-    width: 100%;
-    height: 100%;
-    background-color: #171717;
-    color: #000;
-  
-  }
-  
-  .lines {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    margin: auto;
-    width: 90vw;
-  }
-  
-  .line {
-    position: absolute;
-    width: 1px;
-    height: 100%;
-    top: 0;
-    left: 50%;
-    background: rgba(255, 255, 255, 0.1);
-    overflow: hidden;
-  }
-  .line::after {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 15vh;
-    width: 100%;
-    top: -50%;
-    left: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
-    -webkit-animation: drop 7s 0s infinite;
-            animation: drop 7s 0s infinite;
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
-    -webkit-animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
-            animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
-  }
-  .line:nth-child(1) {
-    margin-left: -25%;
-  }
-  .line:nth-child(1)::after {
-    -webkit-animation-delay: 2s;
-            animation-delay: 2s;
-  }
-  .line:nth-child(3) {
-    margin-left: 25%;
-  }
-  .line:nth-child(3)::after {
-    -webkit-animation-delay: 2.5s;
-            animation-delay: 2.5s;
-  }
-  
-  @-webkit-keyframes drop {
-    0% {
-      top: -50%;
-    }
-    100% {
-      top: 110%;
-    }
-  }
-  
-  @keyframes drop {
-    0% {
-      top: -50%;
-    }
-    100% {
-      top: 110%;
-    }
-  }
-
-  .btn {
-    font-weight: 600;
-    position: relative;
-    padding: 14px 40px;
-    border-radius: 5px;
-    font-size: 16px;
-    font-family: "DM Sans", sans-serif;
-    border: 1px solid transparent;
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
-    transition: all 0.3s ease-in-out;
-}.btn-main {
-  background: #FF4343;
-  color: #fff;
-  border-color: #FF4343;
+.container-space {
+  margin-top: 2rem;
 }
-.center-heading h3 {
-  position: relative;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
+.product-thumbnails {
+  display: flex;
+  margin-top: 2rem;
 }
-.heading-title {
-  font-size: 46px;
+.product-thumbnails > ul {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
 }
-
-
-p{
-  display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;}
-    .center-heading h3:before {
-      position: absolute;
-      content: "";
-      left: 0px;
-      right: 0px;
-      width: 40px;
-      height: 2px;
-      bottom: 0px;
-      margin: 0px  auto;
-      background: #FF4343;
-  }
-
-/* 3rows */
-.feature-style-2 {
-  text-align: center;
-  transition: .4s;
-  background: #fff;
-  padding: 40px 50px;
+.product-thumbnails > li {
+  margin-right: 10px;
+}
+.product-thumbnails > ul > li > img {
+  width: 100px;
+  cursor: pointer;
+}
+.thumbnail-active {
+  border: 2px solid #000;
+}
+.nav-link > img {
+  width: 40px;
   border-radius: 8px;
-  box-shadow: 0 5px 30px 0 rgba(214, 215, 216, 0.57);
+  margin-right: 10px;
 }
-.feature-style-2 i {
-  font-size: 40px;
-  color: #FF4343;
-  transition: .4s ease;
-}.bi-badge2::before {
-  content: "";
-
-}.feature-style-2 i {
-  font-size: 40px;
-  color: #FF4343;
-  transition: .4s ease;
+.btn-custom-color {
+  border: 2px solid #4fc08d;
+  color: #4fc08d;
 }
-.bi {
-  font-family: 'bicon'!important;
-  font-weight: 400;
-  font-style: normal;
-  font-variant: normal;
-  line-height: 1;
-  text-transform: none;
-  speak: none;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.btn-custom-color:hover {
+  border: 2px solid #4fc08d;
+  background-color: #4fc08d;
+  color: #ffffff;
 }
-.bi:first:after .bi:last-child::after {
-    content: "";
-}
-
-
-.center-heading h3 {
-  position: relative;
-  margin-top: 5%;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-}.banner {
-  padding: 60px 0px;
-  background: #F8F8F8;
+.related{
+  width: fit-content;
 }
