--- a/src/app/components/book-detail/book-detail.component.html
+++ b/src/app/components/book-detail/book-detail.component.html
@@ -1,68 +1,49 @@
-<p>{{book.name}}</p>
-
-<section class="banner pb-80">
-    <div class="container">
-        <div class="row align-items-center justify-content-between">
-            <div class="col-lg-6">
-                <div class="banner-img pr-3">
-                    <img src="../../../assets/images/Webp.net-resizeimage-05d69d62624843d4afc367ab3a4a3d3a.webp" alt="" class="img-fluid">
-                </div>
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <img src="https://i.imgur.com/DJZ5Dnk.jpg" /> Hope You enjoy the book</a>
+        </li>
+      </ul>
+    </nav>
+    <div id="app">
+      <div class="container container-space">
+        <div class="row">
+          <div class="col-md-6 pe-5 h-25 ">
+            <img class="img-fluid" :src="bannerImage" alt="" />
+            <div class="product-thumbnails img-thumbnail">
+              <ul>
+                <img  class="img-responsive img-thumbnail" src="../../../assets/images/Webp.net-resizeimage-05d69d62624843d4afc367ab3a4a3d3a.webp" alt="" />
+              </ul>
             </div>
-            <div class="col-md-12 col-lg-6">
-                <div class="banner-content mt-4 mt-lg-0">
-                    <h1>{{book.name}}</h1>
-                    <ul>
-                       <li>Description HERE</li>
-                    </ul>
-                    <a href="#" class="btn btn-main">Get this book at {{book.price|currency :"DN"}}</a>
-                    <p>Interested in free chapter? <a href="#">Get it now</a></p>
-                </div>
-            </div>
-        </div> <!-- / .row -->
-    </div>
-    
-</section>
-
-
-<section class="feature-2 pt-100 bg-grey">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-6">
-                <div class="section-heading center-heading text-center mb-60">
-                    <h3 class="heading-title">Who This Book Is For</h3>
-                    <p>This book is concerned with creating typography and is essential for professionals who regularly work for clients.</p>
-                </div>
-            </div>
+          </div>
+          <div class="col-md-4 p-5">
+            <h3 class="my-3">
+              {{book.name}}
+            </h3>
+            <h4 v-if="stockAvailability">Stock Available</h4>
+            <h4 v-else="stockAvailability">Oops!! Out Of Stock</h4>
+            <h3 class="my-3">Details</h3>
+            <ul v-for="detail in productChecks">
+              <li></li>
+            </ul>
+            <button type="button"  (click)="addToCart()"  class="btn btn-outline-primary btn-lg btn-block btn-custom-color bi-cart" >
+              ADD TO CART
+            </button> 
+            <button routerLink="/checkout" type="button" class="btn btn-outline-danger btn-lg btn-block  bi-cart  float-end" >
+                    Buy now
+            </button>
+          </div>
         </div>
-        <div class="row ">
-            <div class="col-lg-4 col-md-6">
-                <div class="feature-style-2 mb-4 mb-lg-0">
-                    <i class="bi bi-award-fill"></i>
-                    <div class="feature-text">
-                        <h4>Entrepreneurs</h4>
-                        <p>Behind the word mountains, far from the countries</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="feature-style-2 mb-4 mb-lg-0">
-                    <i class="bi bi-article"></i>
-                    <div class="feature-text">
-                        <h4>Project Managers</h4>
-                        <p>Behind the word mountains, far from the countries </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="feature-style-2 mb-4 mb-lg-0">
-                    <i class="bi bi-headset"></i>
-                    <div class="feature-text">
-                        <h4>Students</h4>
-                        <p>Behind the word mountains, far from the countries</p>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
+      </div>
     </div>
-</section>
+    <  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              More Books</a>
+          </li>
+        </ul>
+      </nav>
+  </body>
