--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,1 +1,265 @@
-.slider-container{position:relative;z-index:-4;height: fit-content;}.nav-category{margin-top: 200px;}nav ul {margin: 0;padding:0;list-style: none;}.nav-cat a {display:block;background: var(--app-color);color:#fff;text-decoration: none;padding: .8em 1.8em;text-transform: uppercase;font-size: 80%;letter-spacing: 2px;text-shadow: 0 -1px 0 #000;position: relative;}.nav-cat{vertical-align: top;display: inline-block;box-shadow: 1px -1px -1px 1px rgb(100, 163, 177), -1px 1px -1px 1px #fff, 0 0 6px 3px #fff;border-radius:6px;}.nav-cat li{position: relative;}.nav-cat > li {float:left;border-bottom: 4px #aaa solid;margin-right: 1px;}.nav-cat > li > a {margin-bottom:1px;box-shadow:inset 0 0.5em .33em -.5em rgb(100, 163, 177);}.nav-cat > li:hover , .nav-cat > li:hover >a{border-bottom-color:orange;}.nav-cat li:hover > a {color:orange;}.nav-cat > li:first-child {border-radius: 4px 0 0 4px;}.nav-cat > li:first-child>a{border-radius: 4px 0 0 0;}.nav-cat > li:last-child {border-radius: 0 0 4px 0;margin-right: 0;}.nav-cat > li:last-child >a{border-radius: 0 4px 0 0;}.nav-cat li li a {margin-top:1px }.nav-cat li a:first-child:nth-last-child(2):before {content:"";position: absolute;height:0;width: 0;border: 5px solid transparent;top: 50% ;right:5px;}.searchInput{width: 200px !important;height:50px !important;}.nav-item{width: 100px !important;height:50px !important;}.nav-cat ul {position: absolute;white-space: nowrap;border-bottom: 5px solid orange;z-index: 1;left: -99999em;}.nav-cat > li:hover > ul {left: auto;padding-top: 5px ;min-width: 100%;}.nav-cat > li li ul {border-left:1px solid #fff;}.nav-cat > li li:hover > ul {left: 100%;top: -1px;}.nav-cat > li > a:first-child:nth-last-child(2):before {border-top-color: #aaa;}.nav-cat > li:hover > a:first-child:nth-last-child(2):before {border: 5px solid transparent;border-bottom-color: orange;margin-top:-5px }.nav-cat li li > a:first-child:nth-last-child(2):before {border-left-color: #aaa;margin-top: -5px }.nav-cat li li:hover > a:first-child:nth-last-child(2):before {border: 5px solid transparent;border-right-color: orange;right: 10px;}@media(max-width:700px){.nav-cat{display: none;}}.carousel-inner{height: 290px;}html {font-family: sans-serif;line-height: 1.15;-webkit-text-size-adjust: 100%;-webkit-tap-highlight-color: transparent }body {margin: 0;font-weight: 400;background-color: #fff;font-size: 14px;line-height: 1.5;color: #212529;text-align: left;font-family: "proxima-nova", arial, sans-serif }*, ::after, ::before {box-sizing: border-box }.dropbtn {color: white;padding: 16px;font-size: 16px;border: none;}.dropdown {position: relative;display: inline-block;}.dropdown-content {display: none;position: absolute;background-color: #f1f1f1;min-width: 160px;z-index: 1;}.dropdown-content a {color: black;padding: 12px 16px;text-decoration: none;display: block;}.dropdown-content a:hover {background-color: #ddd;}.dropdown:hover .dropdown-content {display: block;}#miniBasket .details .imageHolder{width:19px;height:23px;background:url("../../../assets/images/basket.png") center no-repeat;background-size:contain;display:block;padding-bottom: 2px;}#miniBasket{position:relative;width:100%;padding-left: 15px;padding-right: 15px;min-height:1px;margin-bottom: 4px;flex:0 0 25%;max-width:25%;order:1;display:flex;flex:0 0 70px;background-color:#ffd04d;position:fixed;right:0;bottom:0;left:0;z-index:1030;height:30vw;max-height:85px;border-left:#3a3a3a 1px solid;padding-left:0px;padding-right:0px;left:75% }@media (min-width:768px){#miniBasket{order:4 }}#miniBasket>div{width:100% }#miniBasket img{width:70px;height:auto }#miniBasket:first-child{border-left:none }@media (min-width:768px){#miniBasket{z-index:auto;left:auto;right:auto;bottom:auto;position:relative;background-color:transparent;height:auto;max-height:auto;border-left:none;padding-left:15px;padding-right:15px }}#miniBasket .details{position:relative;color:#3a3a3a;text-align:center;font-size:15px }@media (min-width:768px){#miniBasket .details{font-size:11px }}#miniBasket .details a{color:#3a3a3a;padding:20px 0;display:block }@media (min-width:768px){#miniBasket .details a{padding-top:30px }}#miniBasket .details #uxSmallBasketQuantity .number{position:absolute;background-color:#3a3a3a;color:#fff;width:20px;height:20px;border-radius:100%;padding-top:1px;text-align:center;right:calc(50% - 26px);top:16px;font-family:proxima-nova,arial,sans-serif }@media (min-width:768px){#miniBasket .details #uxSmallBasketQuantity .number{background-color:#e3c09b;color:#3a3a3a;padding-top:3px;right:-4px }}#miniBasket .details #uxSmallBasketQuantity .text{display:none }.logo-container{text-align: justify;cursor: pointer;}.logo{display: block;margin: 0;width: 112px;}.searchInput{border:dotted 1px hsla(0, 95%, 35%, 1);margin-left: 120px;width: 1000%;}.nav-item-login {margin-right: 170px;}.nav-item-basket{margin-left: 599px;}
+.slider-container{
+  position:relative;
+  z-index:-4;
+  height: fit-content;
+}
+.nav-category{
+  margin-top: 200px;
+}
+nav ul {
+  margin: 0;
+  padding:0;
+  list-style: none;
+}
+.nav-cat a {
+  display:block;
+  background: var(--app-color);
+  color:#fff;
+  text-decoration: none;
+  padding: .8em 1.8em;
+  text-transform: uppercase;
+  font-size: 80%;
+  letter-spacing: 2px;
+  text-shadow: 0 -1px 0 #000;
+  position: relative;
+}
+.nav-cat{
+  vertical-align: top;
+  display: inline-block;
+  box-shadow: 1px -1px -1px 1px rgb(100, 163, 177), -1px 1px -1px 1px #fff, 0 0 6px 3px #fff;
+  border-radius:6px;
+}
+.nav-cat li{
+  position: relative;
+}
+.nav-cat > li {
+  float:left;
+  border-bottom: 4px #aaa solid;
+  margin-right: 1px;
+}
+.nav-cat > li > a {
+  margin-bottom:1px;
+  box-shadow:inset 0 0.5em .33em -.5em rgb(100, 163, 177);
+}
+.nav-cat > li:hover , .nav-cat > li:hover >a{
+  border-bottom-color:orange;
+}
+.nav-cat li:hover > a {
+  color:orange;
+}
+.nav-cat > li:first-child {
+  border-radius: 4px 0 0 4px;
+}
+.nav-cat > li:first-child>a{
+  border-radius: 4px 0 0 0;
+}
+.nav-cat > li:last-child {
+  border-radius: 0 0 4px 0;
+  margin-right: 0;
+}
+.nav-cat > li:last-child >a{
+  border-radius: 0 4px 0 0;
+}
+.nav-cat li li a {
+  margin-top:1px 
+}
+.nav-cat li a:first-child:nth-last-child(2):before {
+  content:"";
+  position: absolute;
+  height:0;
+  width: 0;
+  border: 5px solid transparent;
+  top: 50% ;
+  right:5px;
+}
+.searchInput{
+  width: 200px !important;
+  height:50px !important;
+}
+.nav-item{
+  width: 100px !important;
+  height:50px !important;
+}
+.nav-cat ul {
+  position: absolute;
+  white-space: nowrap;
+  border-bottom: 5px solid orange;
+  z-index: 1;
+  left: -99999em;
+}
+.nav-cat > li:hover > ul {
+  left: auto;
+  padding-top: 5px ;
+  min-width: 100%;
+}
+.nav-cat > li li ul {
+  border-left:1px solid #fff;
+}
+.nav-cat > li li:hover > ul {
+  left: 100%;
+  top: -1px;
+}
+.nav-cat > li > a:first-child:nth-last-child(2):before {
+  border-top-color: #aaa;
+}
+.nav-cat > li:hover > a:first-child:nth-last-child(2):before {
+  border: 5px solid transparent;
+  border-bottom-color: orange;
+  margin-top:-5px 
+}
+.nav-cat li li > a:first-child:nth-last-child(2):before {
+  border-left-color: #aaa;
+  margin-top: -5px 
+}
+.nav-cat li li:hover > a:first-child:nth-last-child(2):before {
+  border: 5px solid transparent;
+  border-right-color: orange;
+  right: 10px;
+}
+
+.carousel-inner{
+  height: 290px;
+}
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent 
+}
+body {
+  margin: 0;
+  font-weight: 400;
+  background-color: #fff;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  font-family: "proxima-nova", arial, sans-serif 
+}
+*, ::after, ::before {
+  box-sizing: border-box 
+}
+.dropbtn {
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+#miniBasket .details .imageHolder{
+  width:19px;
+  height:23px;
+  background:url("../../../assets/images/basket.png") center no-repeat;
+  background-size:contain;
+  display:block;
+  padding-bottom: 2px;
+}
+#miniBasket{
+  position:relative;
+  width:100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  min-height:1px;
+  margin-bottom: 4px;
+  flex:0 0 25%;
+  max-width:25%;
+  order:1;
+  display:flex;
+  flex:0 0 70px;
+  background-color:#ffd04d;
+  position:fixed;
+  right:0;
+  bottom:0;
+  left:0;
+  z-index:1030;
+  height:30vw;
+  max-height:85px;
+  border-left:#3a3a3a 1px solid;
+  padding-left:0px;
+  padding-right:0px;
+  left:75% 
+}
+
+#miniBasket>div{
+  width:100% 
+}
+#miniBasket img{
+  width:70px;
+  height:auto 
+}
+#miniBasket:first-child{
+  border-left:none 
+}
+
+#miniBasket .details{
+  position:relative;
+  color:#3a3a3a;
+  text-align:center;
+  font-size:15px 
+}
+
+#miniBasket .details a{
+  color:#3a3a3a;
+  padding:20px 0;
+  display:block 
+}
+
+#miniBasket .details #uxSmallBasketQuantity .number{
+  position:absolute;
+  background-color:#3a3a3a;
+  color:#fff;
+  width:20px;
+  height:20px;
+  border-radius:100%;
+  padding-top:1px;
+  text-align:center;
+  right:calc(50% - 26px);
+  top:16px;
+  font-family:proxima-nova,arial,sans-serif 
+}
+
+#miniBasket .details #uxSmallBasketQuantity .text{
+  display:none 
+}
+.logo-container{
+  text-align: justify;
+  cursor: pointer;
+}
+.logo{
+  display: block;
+  margin: 0;
+  width: 112px;
+}
+.searchInput{
+  border:dotted 1px hsla(0, 95%, 35%, 1);
+  margin-left: 120px;
+  width: 1000%;
+}
+.nav-item-login {
+  margin-right: 170px;
+}
+.nav-item-basket{
+  margin-left: 599px;
+}
