--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,27 @@ p {
     margin-bottom: 1rem;
   }
 
+/* Scrollbar */
+
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #e3c09b #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #e3c09b;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
